--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,7 @@
 <body>
     <div id="container">
         <div id="Cabecera">
+            <img id="logo" src="/Imagenes/dragon.png.webp" alt="">
             Hyperblog <span id="tagline">Tu blog de Cabecera</span>
         </div>
         <div id="post">
